--- a/vignettes/paper.Rmd
+++ b/vignettes/paper.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 ```{r setup, include = FALSE}
 library(ggplot2)
 library(dplyr)
-library(pkgtest)
+devtools::load_all()
 data(my_iris)
 table_nums <- captioner::captioner(prefix = "Table")
 table_cap  <- table_nums(name = "iristable", 
