--- a/vignettes/paper.Rmd
+++ b/vignettes/paper.Rmd
@@ -17,8 +17,8 @@ knitr::opts_chunk$set(
 ```{r setup, include = FALSE}
 library(ggplot2)
 library(dplyr)
-devtools::load_all()
-data(my_iris)
+devtools::load_all(".")
+data(my_iris, package = "pkgtest")
 table_nums <- captioner::captioner(prefix = "Table")
 table_cap  <- table_nums(name = "iristable", 
                          caption = "Summary of iris data")
